# Hardcover-REST-Wrapper

./: README.md  pyproject.toml
api/: main.py
src/hardcover_rest/: __init__.py  config.py
src/hardcover_rest/api/: __init__.py  dependencies.py
src/hardcover_rest/api/clients/: hardcover.py
src/hardcover_rest/api/routes/: __init__.py  books.py  me_books.py  me_lists.py  me_reviews.py  series_books.py
